--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,6 @@ kiwisolver==1.4.7
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
-numpy==2.1.3
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
@@ -49,3 +48,21 @@ typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 wcwidth==0.2.13
+ipyleaflet>=0.14.0
+ipywidgets>=7.7.1
+matplotlib>=3.7.0
+numpy==1.26.4
+opencv-python>=4.1.2
+pandas>=1.5.3
+psycopg2-binary>=2.9.3
+pymysql>=1.0.2
+python-dotenv>=0.20.0
+requests>=2.27.1
+scikit-learn
+seaborn>=0.12.2
+sqlalchemy>=1.4.37
+sympy>=1.10.1
+xgboost
+scipy >= 1.3.0
+statsmodels >= 0.12.0
+pmdarima
